--- a/css/main.css
+++ b/css/main.css
@@ -40,3 +40,18 @@ a:hover {
     text-decoration: none;
 }
 
+header{
+    width: 60%;
+    margin: auto;
+    border: 3px solid black;
+    text-align: center;
+}
+
+main {
+    width: 60%;
+    margin: auto;
+}
+
+ul {
+    list-style-type: hebrew;
+}
